[package]
name = "axum_guard_combinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-core = "0.2.7"
tower-layer = "0.3.1"
tower-service = "0.3.2"
async-trait = "0.1.57"
pin-project = "1.0.11"
anyhow = "1.0.61"
http = "0.2.8"
either = "1.7.0"

[dev-dependencies]
tower = "0.4.13"
tokio = {version="1.20.1",features=["full"]}
axum = "0.5.15"
