[package]
name = "axum_guard_logic"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Compare extracted and expected data at the router layer with logic."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-core = "0.3.0-rc.1"
tower-layer = "0.3.1"
tower-service = "0.3.2"
async-trait = "0.1.57"
http = "0.2.8"
axum = {version="0.6.0-rc.1",features=["headers"]}
futures-core = "0.3.23"

[dev-dependencies]
tower = "0.4.13"
tokio = {version="1.20.1",features=["full"]}
axum = "0.6.0-rc.1"
tower-http = {version="0.3.4",features=["timeout"]}
axum-macros = "0.3.0-rc.1"